# fun-quant-crypto-trade

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODOs.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: copilot-thought-logging.instructions.md  vibe-coding-tools.instructions.md
.github/prompts/: architecture-blueprint-generator.prompt.md  code-review.prompt.md  explain-code.prompt.md  git-commit-extended.prompt.md  git-commit-short.prompt.md  project-workflow-analysis-blueprint-generator.prompt.md  prompt-builder.prompt.md  update-mcphub-content.prompt.md
data/: BTC_USDT_4h.csv  athens-index.yaml  screener_dax_20240111_195858.html
docs/: analysis-multi-time-frame.md  analysis-regimes.md  backtesting_framework.md  bos-choch-sr-sd.md  chatgpt_conversation.md  features-brainstorming.md  features-modules.md  features-structure.md  index.md  modules.md  mtf-analysis.md  online-resources.md  packaging-skeleton.md  pandas-ta-numpy-issue.md  subpackaging.md  trading-features.md  uv-packaging.md
helpers/: talib_m1_uv.sh
notebooks/: example-features-candle-patterns.ipynb  example-features-directional-change.ipynb  example-features-find-peaks.ipynb  example-features-important-points.ipynb  example-features-local-extrema.ipynb  example-features-pct-chage.ipynb  example-features-rsi-divergence.ipynb  example-features-triple-sma.ipynb  example-get-data.ipynb  example-plotting.ipynb  example-target-labelling.ipynb  example-testing-scipy-functions.py  example.py
scripts/apps/: app.py  appbt.py
scripts/database/: db_populate_ohlc.py
scripts/examples/: example_alphavantage.py  example_beautifulsoup.py  example_features.py  example_finnhub.py  example_foundamentals.py  example_hmmfunct.py  example_margin.py  example_quantstats.py  example_stocksymbol.py  example_talib.py  example_target_opt.py  example_yfinance.py
scripts/get_data/: get_futures_binance.py  get_hist_binance.py  get_hist_coinapi.py  get_hist_cryptowatch.py  get_hist_yahoo.py  update_futures_binance.py
scripts/mybacktrader/: backtesting.py  backtesting_main.py  backtesting_runner.py
scripts/mybacktrader/strategies/: BuyDip.py  Dictum.py  EMARSIBE.py  Traiders.py  TripleH.py
scripts/myvectorbt/: main.py
scripts/portfolio/: factor_model_example.py  financial_literacy_basics.py  optimization_e2e_exercise.py  optimization_portfolio.py  optimization_script_colab.py  portfolio_backtesting.py  portfolio_efficient_frontier.py  prtf_futurereturns.py  prtf_opt_vs_sim.py  prtf_simulation.py
scripts/predictive/: model_crypto.py  model_stock.py
src/pyfolio/: __init__.py  data.py  factors.py  ingest.py  metrics.py  objectives.py  optimization.py  optimizer.py  plotting.py  simulation.py  stochastic.py  utils.py
src/pyquants/: func.py  pivots.py  portfolio.py  selection.py
src/pytrade/: deprecated-ta-features.py  labels.py  loaders.py  plotting.py
src/pytrade/features/: divergence.py  indicators.py  structure.py  tafeatures.py  trends.py  wrappers.py
src/quanttak/: data.py  regimes.py  structural.py  targets.py
tests/: test_foo.py
