[project]
name = "quantyx"
version = "0.0.1"
description = "This is a quantitative crypto trading library for Python."
authors = [{ name = "Takmers", email = "takmers@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ccxt>=4.4.80",
    "matplotlib>=3.10.3",
    "plotly>=6.0.1",
    "python-binance>=1.0.28",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "ta-lib>=0.6.3",
    "yfinance>=0.2.59",
    "backtrader>=1.9.78.123",
    "pandas>=2.2.3",
    "ta>=0.11.0",
    "quantstats>=0.0.77",
]

[project.urls]
Homepage = "https://Takfes.github.io/fun-quant-crypto-trade/"
Repository = "https://github.com/Takfes/fun-quant-crypto-trade"
Documentation = "https://Takfes.github.io/fun-quant-crypto-trade/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "nbqa>=1.9.1",
    "deptry>=0.24.0",
    "ipykernel>=7.1.0",
]

[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# packages = ["pytrade", "quanttak"]
# packages = "find:"
package-dir = { "" = "src" }
# py-modules = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # Ignore unused import warnings
    # "F401",
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Prefer `TypeError` exception for invalid type
    "TRY004",
    # if-else-block-instead-of-if-exp
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.nbqa.mutate]
ruff = true

[tool.interrogate]
fail-under = 80
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
# possible values: 0 (minimal), 1 (detail), 2 (verbose)
verbose = 0
# ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-setters = false
quiet = false
whitelist-regex = []
color = true
# generate-badge = "."
# badge-format = "svg"
